tests/neg-custom-args/captures/capless-strawman3.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capless-strawman3.scala:5:23 -----------------------------
5 |  val t2: () -> Unit = () => op()()  // error
  |                       ^^^^^^^^^^^^
  |                       Found:    () ->{io1} Unit
  |                       Required: () -> Unit
  |
  |                       Note that capability io1 is not included in capture set {}.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capless-strawman3.scala:7:23 -----------------------------
7 |  val t3: () -> Unit = () => op()()()  // error
  |                       ^^^^^^^^^^^^^^
  |                       Found:    () ->{io1, io2} Unit
  |                       Required: () -> Unit
  |
  |                       Note that capability io1 is not included in capture set {}.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capless-strawman3.scala:8:29 -----------------------------
8 |  val t3a: () ->{io2} Unit = () => op()()()  // error
  |                             ^^^^^^^^^^^^^^
  |                             Found:    () ->{io1, io2} Unit
  |                             Required: () ->{io2} Unit
  |
  |                             Note that capability io1 is not included in capture set {io2}.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capless-strawman3.scala:11:23 ----------------------------
11 |  val t1: () -> Unit = () =>  // error
   |                       ^
   |                       Found:    () ->{io1} Unit
   |                       Required: () -> Unit
   |
   |                       Note that capability io1 is not included in capture set {}.
12 |    val f = op()
13 |    f()
   |
   | longer explanation available when compiling with `-explain`
